--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ui": "jest --selectProjects ui"
+    "test:ui": "jest --selectProjects ui",
+    "test:e2e": "cd apps/booklo-e2e && npm test",
+    "test:e2e:headless": "cd apps/booklo-e2e && npm run test:headless",
+    "test:e2e:headed": "cd apps/booklo-e2e && npm run test:headed",
+    "test:e2e:debug": "cd apps/booklo-e2e && npm run test:debug",
+    "test:e2e:setup": "cd apps/booklo-e2e && npm run setup",
+    "test:e2e:watch": "cd apps/booklo-e2e && npm run test:watch",
+    "test:e2e:watch:headed": "cd apps/booklo-e2e && npm run test:watch:headed"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -37,21 +44,26 @@
     "zod": "^3.25.42"
   },
   "devDependencies": {
+    "@cucumber/cucumber": "^11.3.0",
+    "@cucumber/pretty-formatter": "^1.0.1",
     "@eslint/eslintrc": "^3",
+    "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^15.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/jest": "^29.5.8",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@testing-library/react": "^15.0.0",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/user-event": "^14.5.1",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "@types/jest": "^29.5.8",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.0",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
