--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,14 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules",
+    "apps/booklo-e2e",
+    "step_definitions",
+    "support",
+    "features",
+    "**/*.feature",
+    "test-results",
+    "**/test-results"
+  ]
 }
