--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -60,7 +60,7 @@ jobs:
     environment: integration
     services:
       supabase:
-        image: supabase/supabase-local:latest
+        image: supabase/studio:latest
         ports:
           - 54321:54321
           - 54322:54322
@@ -70,6 +70,32 @@ jobs:
           JWT_SECRET: ${{ secrets.SUPABASE_JWT_SECRET }}
           ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
           SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
+          POSTGRES_HOST: db
+          POSTGRES_PORT: 5432
+          POSTGRES_DB: postgres
+          POSTGRES_USER: postgres
+          API_EXTERNAL_URL: http://localhost:54321
+          STUDIO_DEFAULT_ORGANIZATION: Default
+          STUDIO_DEFAULT_PROJECT: Default
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+      db:
+        image: postgres:15
+        env:
+          POSTGRES_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
+          POSTGRES_DB: postgres
+          POSTGRES_USER: postgres
+        ports:
+          - 54322:5432
+        options: >-
+          --health-cmd "pg_isready -U postgres"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     env:
       BASE_URL: ${{ secrets.BASE_URL }}
       API_URL: ${{ secrets.API_URL }}
@@ -124,10 +150,17 @@ jobs:
 
       - name: Wait for Supabase to be ready
         run: |
-          timeout 60 bash -c 'until curl -f ${{ secrets.SUPABASE_URL }}/rest/v1/; do sleep 2; done'
+          echo "Waiting for PostgreSQL to be ready..."
+          timeout 60 bash -c 'until docker exec ${{ job.services.db.id }} pg_isready -U postgres; do sleep 2; done'
+          
+          echo "Waiting for Supabase API to be ready..."
+          timeout 60 bash -c 'until curl -f http://localhost:54321/rest/v1/; do sleep 2; done'
 
       - name: Run database migrations
         run: |
+          # Wait for database to be ready
+          sleep 10
+          # Run migrations
           supabase db reset
 
       - name: Wait for application to be ready
