--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -63,7 +63,6 @@ jobs:
         image: supabase/studio:latest
         ports:
           - 54321:54321
-          - 54322:54322
           - 54323:54323
         env:
           POSTGRES_PASSWORD: ${{ secrets.SUPABASE_DB_PASSWORD }}
@@ -90,7 +89,7 @@ jobs:
           POSTGRES_DB: postgres
           POSTGRES_USER: postgres
         ports:
-          - 54322:5432
+          - 54324:5432
         options: >-
           --health-cmd "pg_isready -U postgres"
           --health-interval 10s
@@ -111,10 +110,10 @@ jobs:
       INACTIVE_USER_PASSWORD: ${{ secrets.INACTIVE_USER_PASSWORD }}
       LIBRARY_USER_EMAIL: ${{ secrets.LIBRARY_USER_EMAIL }}
       LIBRARY_USER_PASSWORD: ${{ secrets.LIBRARY_USER_PASSWORD }}
-      SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      SUPABASE_URL: http://localhost:54321
       SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
       SUPABASE_SERVICE_ROLE_KEY: ${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}
-      NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
+      NEXT_PUBLIC_SUPABASE_URL: http://localhost:54321
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
       NEXT_PUBLIC_SITE_URL: http://localhost:3000
       OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
