--- a/apps/booklo-e2e/package.json
+++ b/apps/booklo-e2e/package.json
@@ -15,10 +15,16 @@
     "test:dry-run": "cucumber-js --dry-run",
     "test:watch": "nodemon --exec \"cucumber-js\"",
     "test:watch:headed": "nodemon --exec \"HEADLESS=false cucumber-js\"",
+    "test:allure": "cucumber-js --format @cucumber/pretty-formatter --format allure-cucumberjs/reporter",
+    "test:headless:allure": "HEADLESS=true cucumber-js --format @cucumber/pretty-formatter --format allure-cucumberjs/reporter",
     "install-browsers": "playwright install",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "clean": "rm -rf reports screenshots videos dist",
+    "clean:allure": "rm -rf reports/allure-results reports/allure-report",
+    "allure:generate": "allure generate allure-results --clean -o reports/allure-report",
+    "allure:open": "allure open reports/allure-report",
+    "allure:serve": "allure serve allure-results",
     "setup": "npm run install-browsers && npm run clean"
   },
   "keywords": [
@@ -39,6 +45,9 @@
     "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "allure-commandline": "^2.34.0",
+    "allure-cucumberjs": "^3.2.2",
+    "allure-js-commons": "^3.2.2",
     "dotenv": "^16.0.0",
     "eslint": "^8.0.0",
     "nodemon": "^3.1.10",
