--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ui": "jest --selectProjects ui",
+    "test:unit": "jest",
+
     "test:e2e": "cd apps/booklo-e2e && npm test",
     "test:e2e:headless": "cd apps/booklo-e2e && npm run test:headless",
     "test:e2e:headed": "cd apps/booklo-e2e && npm run test:headed",
@@ -44,6 +45,9 @@
     "zod": "^3.25.42"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@cucumber/cucumber": "^11.3.0",
     "@cucumber/pretty-formatter": "^1.0.1",
     "@eslint/eslintrc": "^3",
@@ -56,12 +60,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+
     "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3"
