--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "pages:build": "@opennextjs/cloudflare",
+    "pages:build:traditional": "@cloudflare/next-on-pages",
+    "preview": "npm run pages:build && wrangler pages dev",
+    "preview:traditional": "npm run pages:build:traditional && wrangler pages dev .vercel/output/static --compatibility-flag nodejs_compat",
+    "deploy": "npm run pages:build && wrangler pages deploy",
+    "cf:typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -44,9 +50,11 @@
     "zod": "^3.25.42"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.0.0",
     "@cucumber/cucumber": "^11.3.0",
     "@cucumber/pretty-formatter": "^1.0.1",
     "@eslint/eslintrc": "^3",
+    "@opennextjs/cloudflare": "^1.0.0-beta",
     "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.2.0",
@@ -64,6 +72,7 @@
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "wrangler": "^3.84.0"
   }
 }
