--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@cucumber/cucumber": "^11.3.0",
     "@cucumber/pretty-formatter": "^1.0.1",
     "@eslint/eslintrc": "^3",
-    "@opennextjs/cloudflare": "^1.0.0-beta",
+    "@opennextjs/cloudflare": "^1.3.1",
     "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.2.0",
@@ -73,6 +73,6 @@
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
-    "wrangler": "^3.84.0"
+    "wrangler": "^4.22.0"
   }
 }
