--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --watchAll=false --passWithNoTests",
     "test:ui": "jest --selectProjects ui",
     "test:e2e": "cd apps/booklo-e2e && npm test",
     "test:e2e:headless": "cd apps/booklo-e2e && npm run test:headless",
@@ -50,6 +51,10 @@
     "zod": "^3.25.42"
   },
   "devDependencies": {
+    "@babel/core": "^7.27.7",
+    "@babel/preset-env": "^7.27.2",
+    "@babel/preset-react": "^7.27.1",
+    "@babel/preset-typescript": "^7.27.1",
     "@cloudflare/next-on-pages": "^1.0.0",
     "@cucumber/cucumber": "^11.3.0",
     "@cucumber/pretty-formatter": "^1.0.1",
@@ -57,6 +62,7 @@
     "@opennextjs/cloudflare": "^1.3.1",
     "@playwright/test": "^1.52.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.1",
@@ -64,6 +70,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "babel-jest": "^30.0.2",
     "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
