--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "pages:build": "@opennextjs/cloudflare",
-    "pages:build:traditional": "@cloudflare/next-on-pages",
-    "preview": "npm run pages:build && wrangler pages dev",
-    "preview:traditional": "npm run pages:build:traditional && wrangler pages dev .vercel/output/static --compatibility-flag nodejs_compat",
-    "deploy": "npm run pages:build && wrangler pages deploy",
-    "cf:typegen": "wrangler types --env-interface CloudflareEnv env.d.ts",
+    "pages:build": "npx @opennextjs/cloudflare build",
+    "pages:build:traditional": "npx @cloudflare/next-on-pages",
+    "preview": "npm run pages:build && npx wrangler pages dev",
+    "preview:traditional": "npm run pages:build:traditional && npx wrangler pages dev .vercel/output/static --compatibility-flag nodejs_compat",
+    "deploy": "npm run pages:build && npx wrangler pages deploy",
+    "cf:typegen": "npx wrangler types --env-interface CloudflareEnv env.d.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -61,6 +61,8 @@
     "@eslint/eslintrc": "^3",
     "@opennextjs/cloudflare": "^1.3.1",
     "@playwright/test": "^1.52.0",
+    "@swc/core": "^1.12.9",
+    "@swc/jest": "^0.2.38",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.2.0",
