--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -66,7 +66,7 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages deploy .vercel/output/static --project-name=booklo --compatibility-date=2025-01-01
+          command: pages deploy .vercel/output/static --project-name=booklo
 
   deployment-status:
     name: Deployment Status
